写在大二结束

--- a/source/_posts/谷歌邮箱注册.md
+++ b/source/_posts/谷歌邮箱注册.md
@@ -1,5 +1,5 @@
 ---
-title: 草稿Google邮箱注册
+title: 谷歌邮箱注册
 date: 2024-12-16 19:31:11
 tags: 实用工具
 categories: 实用工具
@@ -15,7 +15,7 @@ categories: 实用工具
 
 我们需要将浏览器的默认语言更改为英语，并且使用无痕模式来继续注册流程。下面的步骤以 Chrome 为例。Edge 的操作也是差不多的。
 
-1. 打开Chrome浏览器，点击设置，然后选择语言 -> 添加语言。![add-language](https://cdn.jsdelivr.net/gh/daxianz/image-resource/add-language.webp)
+1. 打开Chrome浏览器，点击右上方竖着的三个点，点击设置，然后选择语言 -> 添加语言。![add-language](https://cdn.jsdelivr.net/gh/daxianz/image-resource/add-language.webp)
 2. 输入“英语”进行筛选，选择英语（美国），然后点击“添加”。![add us english](https://cdn.jsdelivr.net/gh/daxianz/image-resource/add-us-english.webp)
 3. 点击英语（美国）后面的三个点，勾选“以这种语言显示Google Chrome”。![set english as default](https://cdn.jsdelivr.net/gh/daxianz/image-resource/set-english-as-default.webp)
 4. 之后会提示要重启Chrome才能让设置生效，点击“重新启动”。重启之后，你可以查看下Chrome的菜单，如果变成了英文，就可以继续后面的操作了。![reboot chrome](https://cdn.jsdelivr.net/gh/daxianz/image-resource/reboot-chrome.webp)
@@ -41,7 +41,7 @@ categories: 实用工具
 请尝试：
 
 1. 清除浏览器的缓存，然后打开无痕模式
-2. 换家人朋友手机号注册，请和家人朋友商量好时间，以便即使接受验证码
+2. 换家人朋友手机号注册，请和家人朋友商量好时间，以便及时接受验证码
 3. 换成QQ邮箱或网易大师邮箱注册
 4. 2和3结合使用
 5. 尝试更改电脑的地区和首选语言，比如台湾和中文繁体
