大二上结束

--- a/source/_posts/谷歌邮箱注册.md
+++ b/source/_posts/谷歌邮箱注册.md
@@ -15,26 +15,26 @@ categories: 实用工具
 
 我们需要将浏览器的默认语言更改为英语，并且使用无痕模式来继续注册流程。下面的步骤以 Chrome 为例。Edge 的操作也是差不多的。
 
-1. 打开Chrome浏览器，点击右上方竖着的三个点，点击设置，然后选择语言 -> 添加语言。![add-language](https://cdn.jsdelivr.net/gh/daxianz/image-resource/add-language.webp)
-2. 输入“英语”进行筛选，选择英语（美国），然后点击“添加”。![add us english](https://cdn.jsdelivr.net/gh/daxianz/image-resource/add-us-english.webp)
-3. 点击英语（美国）后面的三个点，勾选“以这种语言显示Google Chrome”。![set english as default](https://cdn.jsdelivr.net/gh/daxianz/image-resource/set-english-as-default.webp)
-4. 之后会提示要重启Chrome才能让设置生效，点击“重新启动”。重启之后，你可以查看下Chrome的菜单，如果变成了英文，就可以继续后面的操作了。![reboot chrome](https://cdn.jsdelivr.net/gh/daxianz/image-resource/reboot-chrome.webp)
+1. 打开Chrome浏览器，点击右上方竖着的三个点，点击设置，然后选择语言 -> 添加语言。![add-language](https://dlink.host/wx1.sinaimg.cn/large/008E1Bgely8hxetw5fd84j30zx0c6757.jpg)
+2. 输入“英语”进行筛选，选择英语（美国），然后点击“添加”。![add us english](https://dlink.host/wx1.sinaimg.cn/large/008E1Bgely8hxetwmgwhkj30e50d40tg.jpg)
+3. 点击英语（美国）后面的三个点，勾选“以这种语言显示Google Chrome”。![set english as default](https://dlink.host/wx4.sinaimg.cn/large/008E1Bgely8hxetx19a11j30il07k0t2.jpg)
+4. 之后会提示要重启Chrome才能让设置生效，点击“重新启动”。重启之后，你可以查看下Chrome的菜单，如果变成了英文，就可以继续后面的操作了。![reboot chrome](https://dlink.host/wx2.sinaimg.cn/large/008E1Bgely8hxetzzhfoyj30ii039jrf.jpg)
 
 # 注册谷歌账号
 
-1. 使用无痕模式打开谷歌首页： [https://google.com/ncr](https://google.com/ncr) 。这里加ncr的目的为了避免跳转到了hk域名。点击右上方的Sign in。这里注意，要是英文的Sign in，如果是登录，那么最好是清掉浏览器的缓存。![google signin](https://cdn.jsdelivr.net/gh/daxianz/image-resource/google-signin.webp)
-2. 点击 Create account，并且选择 For my personal use，进入注册流程。![create google account 0](https://cdn.jsdelivr.net/gh/daxianz/image-resource/create-google-account-0.webp)
+1. 使用无痕模式打开谷歌首页： https://google.com/ncr 。这里加ncr的目的为了避免跳转到了hk域名。点击右上方的Sign in。这里注意，要是英文的Sign in，如果是登录，那么最好是清掉浏览器的缓存。![google signin](https://dlink.host/wx3.sinaimg.cn/large/008E1Bgely8hxeu0nve8mj30z80ei0th.jpg)
+2. 点击 Create account，并且选择 For my personal use，进入注册流程。![create google account 0](https://dlink.host/wx3.sinaimg.cn/large/008E1Bgely8hxetxcoiedj30t80eu0tj.jpg)
 3. 输入姓名，这个随便你填了。
 
-![create google account 1](https://cdn.jsdelivr.net/gh/daxianz/image-resource/create-google-account-1.webp)
+![create google account 1](https://dlink.host/wx4.sinaimg.cn/large/008E1Bgely8hxeu1et1mbj30sy0an3yz.jpg)
 
-4. 个人基础信息：生日和性别。![create google account 2](https://cdn.jsdelivr.net/gh/daxianz/image-resource/create-google-account-2.webp)
-5. 选择邮箱名或自己创建邮箱名![create google account 3](https://cdn.jsdelivr.net/gh/daxianz/image-resource/create-google-account-3.webp)
-6. 设置账号密码，需要包括字母、数字和符号。![create google account 4](https://cdn.jsdelivr.net/gh/daxianz/image-resource/create-google-account-4.webp)
-7. 接下来就是最关键的步骤，大多人之前就是被卡在了手机验证上。之前用国内的手机号是验证不了的。但是前面我们把浏览器改成英文之后就可以正常的收到验证码了。![create google account 5](https://cdn.jsdelivr.net/gh/daxianz/image-resource/create-google-account-5.webp)
-8. 输入验证码。![create google account 6](https://cdn.jsdelivr.net/gh/daxianz/image-resource/create-google-account-6.webp)
-9. 添加安全邮箱（可以用中国的邮箱），如果登录不上、忘记密码什么的，就能派上用场了。这一步是选填，你可以直接跳过，之后再填写。![create google account 7](https://cdn.jsdelivr.net/gh/daxianz/image-resource/create-google-account-7.webp)
-10. 注册完成，谷歌会显示你的邮箱和电话号码。点击 Next，然后再点击 OK 即可。至此，谷歌账号注册完成。![create google account 8](https://cdn.jsdelivr.net/gh/daxianz/image-resource/create-google-account-8.webp)
+4. 个人基础信息：生日和性别。![create google account 2](https://dlink.host/wx1.sinaimg.cn/large/008E1Bgely8hxets0xwp7j30sn0bawf1.jpg)
+5. 选择邮箱名或自己创建邮箱名![create google account 3](https://dlink.host/wx2.sinaimg.cn/large/008E1Bgely8hxets05ctxj30sq0bdaaq.jpg)
+6. 设置账号密码，需要包括字母、数字和符号。![create google account 4](https://dlink.host/wx1.sinaimg.cn/large/008E1Bgely8hxetxko0ouj30sx0bvt9f.jpg)
+7. 接下来就是最关键的步骤，大多人之前就是被卡在了手机验证上。之前用国内的手机号是验证不了的。但是前面我们把浏览器改成英文之后就可以正常的收到验证码了。![create google account 5](https://dlink.host/wx4.sinaimg.cn/large/008E1Bgely8hxetxpr0qaj30sq0ap0tb.jpg)
+8. 输入验证码。![create google account 6](https://dlink.host/wx3.sinaimg.cn/large/008E1Bgely8hxetxzxeb5j30sy0ar3yy.jpg)
+9. 添加安全邮箱（可以用中国的邮箱），如果登录不上、忘记密码什么的，就能派上用场了。这一步是选填，你可以直接跳过，之后再填写。![create google account 7](https://dlink.host/wx4.sinaimg.cn/large/008E1Bgely8hxety7zdacj30st0ag3z3.jpg)
+10. 注册完成，谷歌会显示你的邮箱和电话号码。点击 Next，然后再点击 OK 即可。至此，谷歌账号注册完成。![create google account 8](https://dlink.host/wx3.sinaimg.cn/large/008E1Bgely8hxetygrol1j30sr0al0t9.jpg)
 
 # 修改了浏览器语言之后仍然卡在了手机验证
 
